fixed jumping of content

--- a/src/styles/card_goods.scss
+++ b/src/styles/card_goods.scss
@@ -15,22 +15,22 @@
 
   &__picture-link {
     margin: 15px auto 37px;
-    width: 94%;
-
-    &:hover {
-      transform: scale(1.2,1.2) translateY(-13px) translateX(-4px);
-      transition: transform $transition-duration;
-      margin-bottom: 29px;
-    }
+    width: 98.5%;
   }
 
   &__picture {
+    margin: 0 auto;
     width: 100%;
+    box-sizing: border-box;
+    border: solid transparent 4px;
+    border-radius: 5px;
+    transition: transform $transition-duration;
 
     &:hover {
+      box-sizing: border-box;
+      transform: scale(1.2) translateY(-14px);
       border: solid rgba(0, 0, 0, 0.07) 4px;
       border-radius: 5px;
-      transition: border $transition-duration;
     }
   }
   
